@@ -54,6 +54,7 @@ enum StatusCodes {
 	GT_BUFFER_OVERFLOW,
 	GT_PARSER_ERROR,
 	GT_CRYPTO_FAILURE,
+	GT_DUPLICATE_ERROR,
 
 	GT_END_OF_STREAM,
 	GT_UNKNOWN_ERROR = 0xffff
