@@ -1,3 +1,4 @@
+* IMPROVEMENT: Added -D for specifying descriptin file directory.
 * BUGFIX: Hex strings must contain even number of characters.
 * IMPROVEMENT: Added a parameter to -w for wrapping the long byte strings to a specified width.
 * IMPROVEMENT: Default time format is set to GMT+00. To express time in local timezone use -t option.
